# text_to_audio

./: README.md  main.py  pyproject.toml
text_to_audio/: pdf_converter.py  text_to_speech.py
